<resources>
    <string name="app_name">COPD Health Care</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="device_watch">ZoeTech手錶</string>
    <string name="device_spo2">SPO2 手環</string>
    <string name="device_env">環境感測裝置</string>
    <string name="remove">移除</string>
    <string name="pair">配對</string>
    <string name="validate">驗證</string>
    <string name="watch">手環</string>
    <string name="spo2">血氧裝置</string>
    <string name="goal">Goal</string>
    <string name="step_size">Step size</string>
    <string name="about">About</string>
    <string name="account">帳號</string>
    <string name="goal_summary">Current goal: %,d steps</string>
    <string name="step_size_summary">Current step size: %1$.2f %2$s</string>
    <string name="sign_in">Sign in with your Google account to use the Achievements and Leaderboards features</string>
    <string name="signed_in">Signed in as %s</string>
    <string name="export_summary">Save your data in a .csv file</string>
    <string name="export_title">Export/Backup</string>
    <string name="import_summary">Imports previously saved data</string>
    <string name="import_title">Import/Restore</string>
    <string name="notification">Show notification</string>
    <string name="set_goal">Set goal</string>
    <string name="set_step_size">Set step size</string>
    <string name="sign_out">Sign out</string>
    <string name="file_cant_read">Error: %s can not be read</string>
    <string name="error_file">Error accessing the file: %s</string>
    <string name="error_external_storage_not_available">Error: External storage not available</string>
    <string name="data_saved">Data saved in %s</string>
    <string name="entries_imported">%d entries imported</string>
    <string name="entries_ignored">%d entries were ignored as they did not contain valid data</string>
    <string name="entries_overwritten">%d entries were overwritten with imported data</string>
    <string name="sign_in_necessary">Sign in necessary</string>
    <string name="please_sign_in_with_your_google_account">Please sign in with your Google+ account to use this feature.</string>
    <string name="steps">steps</string>
    <string name="text_color">Text color:</string>
    <string name="background_color">Background color:</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="faq">FAQ</string>
    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_text">%s steps to go</string>
    <string name="total">Total</string>
    <string name="notification_title">Pedometer is counting</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="average">Average</string>
    <string name="record">Record</string>
    <string name="total_last_7_days">Total last 7 days</string>
    <string name="average_last_7_days">Average last 7 days</string>
    <string name="total_this_month">Total this month</string>
    <string name="average_this_month">Average this month</string>
    <string name="file_already_exists">File already exists. Are you sure you want to overwrite it?</string>
    <string name="about_text_links">This app was created by Thomas Hoffmann (<a href="https://www.j4velin.de">www.j4velin.de</a>) and uses <a href="https://github.com/blackfizz/EazeGraph">EazeGraph</a> by Paul Cech and <a href="https://github.com/attenzione/android-ColorPickerPreference">ColorPickerPreference</a> by Sergey Margaritov.\n\nPedometer is open source! Get the code and the full list of contributors from <a href="https://github.com/j4velin/Pedometer">GitHub</a>.\n\n</string>
    <string name="about_app_version">App version: %s</string>
    <string name="since">Since %s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="close">close</string>
    <string name="no_split_active">No split counter active. Click start to count the steps from now on</string>
    <string name="split_count">Split count</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="ispaused">Pedometer is paused</string>
    <string name="pause_on_power_title">Pause while charging</string>
    <string name="pause_on_power_summary">Pause Pedometer while device is charging</string>
    <string name="no_sensor">Sensor not found</string>
    <string name="no_sensor_explain">This app requires a dedicated hardware step sensor - which your device does not have. This app won\'t run on your device.</string>
    <string name="permission_external_storage">No permission to access external storage</string>
    <string name="step">步數</string>
    <string name="env_info">環境資訊</string>
    <string name="daily_step">今日統計</string>
    <string name="temperature">溫度(℃)</string>
    <string name="humidity">濕度(%)</string>
    <string name="pm25">PM2.5</string>
    <string name="none">---</string>
    <string name="startActivity">開始運動</string>
    <string name="mainpage">主頁</string>
    <string name="activity">活動</string>
    <string name="personalInfo">個人資料</string>
    <string name="history">歷史紀錄</string>
    <string name="myDevice">我的裝置</string>
    <string name="sbp">收縮壓</string>
    <string name="dbp">舒張壓</string>
    <string name="hr">心率</string>
    <string name="spo2_name">血氧濃度</string>
    <string name="weakly_step">本周步數</string>
    <string name="LastUpdateTime">最後更新時間</string>
    <string name="EnvironmentGetByUserEndPoint">/env/getbyuser</string>
    <string name="UV">紫外線</string>
    <string name="Login">登入</string>
    <string name="password">密碼</string>
    <string name="forgetPwd">忘記密碼</string>
    <string name="register">註冊</string>
    <string name="title_activity_login_activitys">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">COPD\nHealth Care</string>
    <string name="logout">登出</string>
    <string name="title_activity_introduce">IntroduceActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="version">版本 V1.0</string>
    <string name="title_activity_health_education">HealthEducationActivity</string>
    <string name="large_text">
        ( Chronic Obstructive Pulmonary Disease, COPD) 是一種呼吸道長期發炎導致無法恢復之呼吸道阻塞，使得氣體無法通暢地進出呼吸道的疾病...
    </string>
    <string name="education">衛教</string>
    <string name="title_activity_health_article">HealthArticleActivity</string>

    <string name="title_activity_history_detail">HistoryDetailActivity</string>
    <string name="setting">設定</string>
    <string name="CATScore">個人CAT量表分數</string>
</resources>
