<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account">
            <EditText
                android:id="@+id/etAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" >
            <EditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Login"
            android:textColor="@color/md_White"
            android:background="@drawable/button_primary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:gravity="center">
            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_height="match_parent"
                android:text="@string/register" />
            <TextView
                android:id="@+id/tvForgetPwd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:text="@string/forgetPwd" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_alignParentBottom="true">
        <ProgressBar
            android:id="@+id/progressbar"
            android:visibility="invisible"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_marginBottom="0dp"
            android:max="100"
            android:backgroundTint="@color/md_blue_50"
            android:indeterminateTint="#1a09d6"
            android:layout_marginTop="-7dp"/>
    </RelativeLayout>

</RelativeLayout>